deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-galleta
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mi-galleta
  template:
    metadata:
      labels:
        app: mi-galleta
    spec:
      containers:
      - name: galleta-container
        image: claitoun/galletafortuna
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        # livenessProbe:
        #   httpGet:
        #     path: /healthcheck
        #     port: 3000
        #     # httpHeaders:
        #     # - name: Custom-Header
        #     #   value: Awesome
        #   initialDelaySeconds: 10
        #   periodSeconds: 15
        # readinessProbe:
        #   httpGet:
        #     path: /healthcheck
        #     port: 3000
        #     # httpHeaders:
        #     # - name: Custom-Header
        #     #   value: Awesome
        #   initialDelaySeconds: 10
        #   periodSeconds: 15
