svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-v1-svc
spec:
  selector:
    app: mi-servicio
  # type: ExternalName
  # externalName: serviceName.namespace.svc.cluster.local #or any external svc
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
