gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80 # to expose internal service via external port 8080
      name: http
      protocol: http
    hosts:
    - ""
