virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mirule-virtualservice
spec:
  hosts:
  - ""
  gateways:
  - my-gateway
#  - mesh # applies to all the sidecars in the mesh
  http:
  - match:
    - uri:
        prefix: /v1
    rewrite:
        uri: "/v1-rewite"
    route:
    - destination:
        host: v1-svc
        port:
          number: 80
  - match:
    - uri:
        prefix: /v2
    rewrite:
        uri: "/v2-rewite"
    route:
    - destination:
        host: v2-svc
        port:
          number: 80
  # - match:
  #   - headers:
  #       cookie:
  #         exact: "user=dev-123"
  #   route:
  #   - destination:
  #       port:
  #         number: 7777
  #       host: reviews.qa.svc.cluster.local
  # - match:
  #   - uri:
  #       prefix: /reviews/
  #   route:
  #   - destination:
  #       port:
  #         number: 9080 # can be omitted if it's the only port for reviews
  #       host: reviews.prod.svc.cluster.local
  #     weight: 80
  #   - destination:
  #       host: reviews.qa.svc.cluster.local
  #     weight: 20
